k8s/base/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: github-api-proxy
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: proxy
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
