k8s/base/mongodb-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: database
  ports:
    - name: mongodb
      port: 27017
      targetPort: 27017
