k8s/base/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  selector:
    app.kubernetes.io/component: database
  ports:
    - name: mongodb
      port: 27017
      targetPort: mongodb
      protocol: TCP
